--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="pt-br" class="light">
   <head>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -24,7 +24,7 @@
         </li>
 
         <li>
-          <a href="https://github.com/NicoMota" target="_blank"
+          <a href="https://github.com/NicoMota?tab=repositories" target="_blank"
             >Ver meu portfólio</a
           >
         </li>
@@ -35,6 +35,42 @@
           >
         </li>
       </ul>
+      <div id="social-links">
+        <a href="https://github.com/NicoMota" target="_blank">
+          <ion-icon name="logo-github"></ion-icon>
+        </a>
+
+        <a href="https://instagram.com/nicolasmota_" target="_blank">
+          <ion-icon name="logo-instagram"></ion-icon>
+        </a>
+
+        <a href="https://" target="_blank">
+          <ion-icon name="logo-youtube"></ion-icon>
+        </a>
+
+        <a
+          href="https://www.linkedin.com/in/nicolas-da-mota-monteiro-dos-santos-9a269b1a1/"
+          target="_blank"
+        >
+          <ion-icon name="logo-linkedin"></ion-icon>
+        </a>
+      </div>
+      <footer>
+        Feito por
+        <a
+          href="https://www.linkedin.com/in/nicolas-da-mota-monteiro-dos-santos-9a269b1a1/"
+          target="_blank"
+          >Nícolas Mota</a
+        >, para que você ver um poucos das minhas habilidades.
+      </footer>
     </div>
+    <script
+      type="module"
+      src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"
+    ></script>
+    <script
+      nomodule
+      src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"
+    ></script>
   </body>
 </html>
